# pnpxai

./: .gitignore  404.html  Dockerfile  LICENSE  Makefile  README.md  SUMMARY.md  configs.ini  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pnpxai.sublime-workspace  setup.py  shutdown.py  sitemap.xml  test.py  test_client.py  test_server.py
api/: index.html
backend/: evaluator.md  recommender.md
datasets/: liver_tumor.py
demo/: index.html
detector/: index.html
docs/: api.rst  changelog.rst  conf.py  demo.html  demo.md  detector.md  evaluator.md  examples.rst  explainer.md  faq.rst  index.md  index.rst  install.rst  optimizer.md  recommender.md  tutorial.rst
evaluator/: index.html
explainer/: index.html
frontend/: .env.dev  docker-compose.dev.yml  ui-design.md
gitbooks/: README.md  collaboration-manual.md  research.md  resources.md
models/: liver_tumor.py
open_xai/: __init__.py  _meta.py  utils.py
optimizer/: index.html
research/gh/demo/: .gitignore  README.md  pyproject.toml  requirements.txt
research/gh/demo/notebooks/: client.ipynb  explainers.ipynb  setup_for_notebooks.ipynb
research/gh/demo/pnpxai/client/: database.py  manager.py  objects.py
research/gh/demo/pnpxai/core/evaluators/: base.py  pixel_flipping.py
research/gh/demo/pnpxai/core/explainers/: base.py  gradcam.py  lrp.py
research/gh/demo/pnpxai/core/explainers/_utils/cam/: extractors.py
research/gh/demo/pnpxai/core/explainers/_utils/lrp/: attributors.py  composites.py
research/gh/demo/pnpxai/samples/: datasets.py
research/gh/demo/tests/: test_sample.py
(+716 files in other folders)
