[build-system]
requires = ["setuptools>61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pnpxai"
version = "0.0.1"
authors = [
  { name="gkim", email="geonhyeong.kim@kaist.ac.kr" },
]
description = "pnpxai demo"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["pnpxai"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/ghkim9213/pnpxai-demo"
"Bug Tracker" = "https://github.com/ghkim9213/pnpxai-demo/issues"
